# neuralnetwork

./: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  README.md  main.cpp  neural_network.cpp  neural_network.h  neural_network.vcxproj  neural_network.vcxproj.filters
Release/: neural_network.exe.recipe  neural_network.iobj  neural_network.ipdb
Release/neural_network.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  neural_network.lastbuildstate
activation/: ActivationType.h  ActivationUtil.cpp  ActivationUtil.h
algorithms/: AdamAlgorithm.cpp  AdamAlgorithm.h
core/: NeuralNetwork.cpp  NeuralNetwork.h  neural_network.cpp  neural_network.h  nodes.h
math/: math_util.h
propagation/: BackwardsPropagation.cpp  BackwardsPropagation.h  ForwardPropagation.cpp  ForwardPropagation.h  backwards_propagation.cpp  backwards_propagation.h  forward_propagation.cpp  forward_propagation.h  forwards_propagation.cpp  forwards_propagation.h
propagation/propagable/: backwards_propagable.h  forwards_propagable.h
utilities/: MathUtil.cpp  MathUtil.h  math_util.cpp  math_util.h
weight/: weight.cpp  weight_factory.cpp  weight_factory.h
x64/Debug/: neural_network.exe.recipe  neural_network.ilk  vc143.idb
x64/Debug/neural_network.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  (+1 more)
x64/Release/: neural_network.exe.recipe  neural_network.iobj  neural_network.ipdb
(+9 files in other folders)
